--- a/changelog/upgrade-guidance/breaking-changes.mdx
+++ b/changelog/upgrade-guidance/breaking-changes.mdx
@@ -1,236 +1,163 @@
 ---
-title: "Breaking Changes and Migrations"
-description: "A clear summary of any breaking changes introduced in recent versions, with concise migration instructions and references to affected features or files. Essential for teams upgrading across major versions."
+title: "Breaking Changes and Deprecations"
+description: "Details significant changes that may require user action, such as API removals, behavioral modifications, or minimum toolchain requirements (e.g., move to C++17). Includes a list of deprecated features and timelines for their removal."
 ---
 
-# Breaking Changes and Migrations
+# Breaking Changes and Deprecations
 
-GoogleTest evolves with enhancements and improvements that sometimes introduce breaking changes. This page clearly summarizes any such breaking changes introduced in recent major releases, along with concise migration instructions to guide your upgrade process. It is essential reading for teams planning to upgrade across major versions to maintain a smooth testing environment.
-
----
-
-## What Is Covered Here
-
-This page focuses exclusively on changes that may impact existing user tests and mocks written with GoogleTest and GoogleMock. It highlights:
-
-- Breaking changes affecting core macros, APIs, or behaviors in GoogleTest and GoogleMock
-- Required code or test changes for a successful migration
-- Deprecated features with removal timelines
-- References to affected headers, macros, or test patterns
+This page details significant changes in GoogleTest and GoogleMock that may impact your existing tests and build setups. It highlights API removals, behavioral modifications, and new minimum requirements that require your attention. Additionally, this page lists deprecated features along with timelines for their removal, empowering you to plan and execute smooth upgrades.
 
 ---
 
-## Understanding Breaking Changes
+## 1. Introduction
 
-### Why Breaking Changes Happen
+Upgrading GoogleTest or GoogleMock occasionally involves adapting your code due to breaking changes or deprecated features. This documentation focuses specifically on:
 
-Breaking changes are sometimes necessary for:
+- Changes that **require user action** or code modification.
+- Behavioral changes that might alter test outcomes or mock expectations.
+- Minimum compiler and language standard requirements that affect build configurations.
+- Features that are deprecated, with clear timelines and recommended migration paths.
 
-- Improving API clarity or usability
-- Correcting long-standing issues or bugs
-- Enhancing safety and correctness guarantees
-- Removing rarely used or obsolete features
+Understanding these changes will help maintain the correctness, compatibility, and performance of your test suites.
 
-### Identifying Breaking Changes
+## 2. Minimum Toolchain Requirements
 
-Typical signs that a change is breaking:
+Starting from recent versions, GoogleTest and GoogleMock have tightened build requirements to leverage modern C++ features and improve cross-platform behavior.
 
-- Public APIs or macro signatures have changed
-- Behavioral changes that affect test outcomes or mock verifications
-- Removed or renamed macros or classes
-- Changes in default settings that alter test execution flow
+- **C++ Standard:** Requires at least **C++17** support. Compilers or build systems that only support earlier standards (e.g., C++11 or C++14) are no longer supported.
+
+  > This change enables the use of newer language features that improve code safety, expressiveness, and performance.
+
+- **Compiler Versions:** Ensure the compiler version you use supports C++17 fully. Commonly used modern compilers such as GCC (8+), Clang (7+), and MSVC (2017 update 3 and later) satisfy this requirement.
+
+- **Thread Safety and Platform Support:** Builds assume platforms support standard threading, exception handling, and file system features. Embedded or constrained environments without these capabilities may face build or runtime issues.
+
+<Tip>
+If you encounter build errors related to compiler versions or language standard support, verify your toolchain configuration to comply with C++17 or later.
+</Tip>
+
+## 3. Behavioral Changes Affecting Tests
+
+### 3.1 Expectation Matching Order
+
+GoogleMock follows a strict rule that **later expectations override older ones** for matching calls. This change, fully enforced in recent versions, affects how multiple expectations on the same mock method interact.
+
+- In the case of multiple `EXPECT_CALL` statements matching the same method and argument patterns, the most recently defined expectation takes precedence.
+- This ordering influences which action or return value is taken on the call.
+
+<Note>
+Understanding this precedence is critical to avoid unexpected test failures or surprises when mocking.
+</Note>
+
+### 3.2 Stickiness of Expectations
+
+Expectations remain "sticky" by default, meaning they continue matching calls even after their specified invocation counts are reached (unless `RetiresOnSaturation()` is used). This change enforces consistency with gMock's design philosophy.
+
+- To retire an expectation after it's fulfilled, explicitly use `.RetiresOnSaturation()`.
+- Expectations included in sequences retire automatically when the next expectation in the sequence is used.
+
+<Tip>
+When writing tests expecting sequential calls with different results, combine the expectation sequence with `RetiresOnSaturation()` to prevent overlapping matches.
+</Tip>
+
+### 3.3 Default Actions for Mock Methods
+
+- Mock functions with return types supporting default construction now return default-constructed values by default if no explicit action is specified.
+- This was introduced to improve usability but may affect legacy tests that rely on different return values.
+
+### 3.4 Changes in Uninteresting Call Warnings
+
+- By default, gMock now warns on uninteresting calls (calls to mock methods with no expectations).
+- Use `NiceMock` wrappers to suppress these warnings if your tests do not require strict call validation.
+- For stricter validation, use `StrictMock` which treats uninteresting calls as failures.
+
+## 4. Deprecated Features and Removal Timeline
+
+### 4.1 Legacy MOCK_METHOD Macros
+
+The older family of mock method macros (`MOCK_METHODn`, `MOCK_CONST_METHODn`, etc.) is deprecated in favor of the generic `MOCK_METHOD` macro.
+
+**Action:**
+
+- Migrate to `MOCK_METHOD` which has a clearer syntax and supports all method qualifiers.
+- Avoid introducing new mocks with old macros.
+
+### 4.2 Compiler Support for C++14 and Earlier
+
+Support for compilers that lack C++17 capability has been dropped.
+
+### 4.3 Deprecated Mock Behavior Modes
+
+- The underlying implementations of mock behavior modifiers are being refined.
+- `NaggyMock` remains the default but may change in future versions.
+
+### 4.4 Heap Checker and Leak Detection Changes
+
+- The heap checker integration with mocks is now more robust but relies on proper virtual destructors in mock classes.
+
+### 4.5 Support for Variadic Function Mocking
+
+- Mocking of variadic functions is still not supported and marked for deprecation where workarounds exist.
+
+## 5. Migration Recommendations
+
+### 5.1 Review Your Mock Expectations
+
+- Explicitly specify the order of expectations when call ordering matters using sequences or `InSequence`.
+
+### 5.2 Use New `MOCK_METHOD` Macro
+
+- Refactor mock methods to use the new macro for better compatibility and future-proofing.
+
+### 5.3 Confirm C++17 Compliance
+
+- Update build configurations in CMake, Bazel, or other build systems to target C++17 or later.
+
+### 5.4 Adjust Mock Behavior Modes
+
+- Switch to `NiceMock` or `StrictMock` as appropriate to manage warnings and errors on unexpected calls.
+
+### 5.5 Use `.RetiresOnSaturation()` Explicitly
+
+- To avoid sticky expectations causing unexpected failures, especially in sequences, apply `.RetiresOnSaturation()`.
+
+## 6. Troubleshooting Common Issues
+
+### 6.1 Unexpected Call Failures
+
+- Typically caused by overlapping expectations or order mismatches.
+- Investigate using `--gmock_verbose=info` for detailed tracing.
+
+### 6.2 Compilation Errors Related to MOCK_METHOD
+
+- Check for commas in parameter types that require extra parentheses or type aliases.
+- Verify all mocked methods are virtual.
+
+### 6.3 Heap Checker Warnings
+
+- Ensure all base classes have virtual destructors when mocking.
+
+### 6.4 Build Failures Due to Language Standard
+
+- Confirm your compiler and build settings enforce C++17 or later.
+
+## 7. Additional Resources
+
+- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) – Beginner-friendly introduction to GoogleMock.
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) – Advanced usage recipes and patterns.
+- [Mocking Reference](../api-reference/mocking-api/mock-creation.md) – Detailed API of mocks.
+- [Breaking Changes Documentation](../changelog/upgrade-guidance/breaking-changes.md) – Detailed changelog and migration notes.
+- [Upgrade Guide](../changelog/upgrade-guidance/upgrade-guide.md) – Step-by-step guide to upgrade.
 
 ---
 
-## Migration Basics
-
-To migrate across major versions with breaking changes, you should:
-
-1. **Review the breaking changes listed here** carefully for the versions you are upgrading to
-2. **Update your test mocks and test code** as recommended
-3. **Run your full test suite** to identify incompatibilities and verify fixes
-4. **Consult additional migration guides or upgrade checklists** as needed
+### Quick links from this document:
+- [Minimum Toolchain Requirements](#1-minimum-toolchain-requirements)
+- [Behavioral Changes Affecting Tests](#3-behavioral-changes-affecting-tests)
+- [Deprecated Features and Removal Timeline](#4-deprecated-features-and-removal-timeline)
+- [Migration Recommendations](#5-migration-recommendations)
+- [Troubleshooting](#6-troubleshooting-common-issues)
 
 ---
 
-## Notable Breaking Changes in Recent Versions
-
-### MOCK_METHOD Macro Redesign
-
-GoogleTest unified and modernized mock method declarations by introducing the generic `MOCK_METHOD` macro, replacing the old `MOCK_METHODn` family:
-
-- Old style: `MOCK_METHOD1(Foo, bool(int))`
-- New style: `MOCK_METHOD(bool, Foo, (int))`
-
-**Impact:**
-
-- Migration requires updating mock class definitions to the new macro syntax
-- Changes the order and grouping of parameters
-- Supports richer qualifiers like `const`, `override`, `noexcept`, and calling conventions
-
-**Migration Tip:** Use parentheses around return types or argument types containing commas, e.g.,
-
-```cpp
-MOCK_METHOD((std::pair<int, bool>), GetPair, ());
-MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-```
-
-See the [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md#MOCK_METHOD) and [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md#mocking-classes) for detailed migration examples.
-
----
-
-### Const and Overloaded Method Handling in Mocks
-
-- GoogleMock now requires explicit use of `(const)` qualifier in `MOCK_METHOD` for const methods.
-- Overloaded methods must all be mocked using the new macro and can require use of `Const()` wrapper in expectations for const overload disambiguation.
-
-**Impact:**
-
-- Ensure all overloaded methods are mocked.
-- Use `Const()` wrappers to make expectations explicit.
-
-Example:
-
-```cpp
-EXPECT_CALL(Const(mock_foo), GetBar()).WillOnce(ReturnRef(bar));
-```
-
-See [Mocking Reference - SelectOverload](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md#selecting-between-overloaded-functions) for details.
-
----
-
-### Uninteresting vs Unexpected Calls Behavior
-
-GoogleMock clearly distinguishes:
-
-- *Uninteresting calls*: Methods with **no** `EXPECT_CALL` but invoked. Causes warnings by default.
-- *Unexpected calls*: Calls that don't match any existing `EXPECT_CALL`. Always an error.
-
-**Change:**
-
-- Added facilities like `NiceMock<T>` and `StrictMock<T>` to customize whether warnings are shown or treated as errors for uninteresting calls.
-
-**Impact:**
-
-- Migrate uninteresting call warnings by wrapping mocks in `NiceMock` or `StrictMock` as needed.
-- Avoid blindly adding `EXPECT_CALL` to silence warnings.
-
-See [gMock Cookbook - The Nice, the Strict, and the Naggy](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md#the-nice-the-strict-and-the-naggy) for best practices.
-
----
-
-### Actions and Matchers Enhancements
-
-Improvements to actions and matchers might cause minor incompatibilities:
-
-- `EXPECT_CALL` now infers cardinalities differently when `WillOnce`/`WillRepeatedly` are used.
-- Parameterized matchers and actions now require careful attention to typing and ownership to avoid compile errors.
-
-**Impact:**
-
-- Review and adapt actions using lambdas or functors to match new expectations.
-- When using `Return()` with move-only types, prefer lambdas or `ReturnPointee()` for safety.
-
-See [gMock Cookbook - Using Actions](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md#using-actions) and [Creating and Using Mocks](https://github.com/google/googletest/blob/main/guides/mocking-and-advanced-techniques/creating-and-using-mocks.md).
-
----
-
-### Verifying and Clearing Mocks
-
-- Added new APIs `Mock::VerifyAndClearExpectations` and `Mock::VerifyAndClear` to verify and clear expectations explicitly.
-
-**Impact:**
-
-- You can now force verification before destruction to detect silent failures.
-
-```cpp
-ASSERT_TRUE(Mock::VerifyAndClearExpectations(&mock_object));
-```
-
-See [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md#classes) for details.
-
----
-
-### Deprecated and Removed Features
-
-- The old `MOCK_METHODn` macros are deprecated although still supported, and will be removed in future releases. Migrate to the unified `MOCK_METHOD` macro.
-- Deprecated named flags or behaviors may be removed.
-
----
-
-## Common Migration Pitfalls and Solutions
-
-### Compilation Failures from Changed Macro Signatures
-
-Ensure your mock method declarations are updated and correct, especially with:
-
-- Correct parentheses around types with commas
-- Proper qualifier order (e.g., `(const, override)`)
-
-### Ambiguous Calls to Overloaded Methods
-
-Use `Const()` to disambiguate const methods in expectations.
-
-### Unintended Mock Behavior due to Missing Expectations
-
-Uninteresting call warnings alert you to missing expectations or unexpected calls. Use `NiceMock` or add catch-all expectations carefully.
-
-### Problems with Move-Only Types
-
-Use lambdas with `WillOnce` or `WillRepeatedly` to provide fresh objects on each call.
-
----
-
-## Step-by-Step Migration Workflow
-
-<Steps>
-<Step title="Prepare">
-Review the GoogleTest release notes and breaking changes documented here for your target version.
-</Step>
-<Step title="Update Mock Classes">
-Convert `MOCK_METHODn` macros to the new `MOCK_METHOD` macro syntax;
-add explicit `const` and other qualifiers as needed.
-</Step>
-<Step title="Fix Test Expectations">
-Adjust your `EXPECT_CALL` and `ON_CALL` statements, using `Const()` for const overloads
-and adding catch-all expectations for uninteresting calls.
-</Step>
-<Step title="Fix Actions and Matchers">
-Review all custom and complex actions/matchers;
-update lambdas and functors as per new recommended patterns.
-</Step>
-<Step title="Run and Debug">
-Run your full test suite with `--gmock_verbose=info` to check for warnings or failures;
-address them before proceeding.
-</Step>
-<Step title="Finalize">
-Add `Mock::VerifyAndClearExpectations()` calls in tests where mock lifetime is non-trivial.
-</Step>
-</Steps>
-
----
-
-## Troubleshooting Tips
-
-- When a mock method seems not mocked, confirm it is declared `virtual` and overridden with `MOCK_METHOD`.
-- Use `--gmock_verbose=info` to get detailed expectation matching information.
-- Check for missing virtual destructors in interfaces to avoid object lifecycle issues.
-- Ensure expectations are set before the mock method is called.
-- For move-only types, ensure actions create fresh objects on each call.
-
----
-
-## Additional Resources
-
-- [Migration Checklist](./upgrade-checklist)
-- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md)
-- [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md)
-- [Breaking Changes and Removals](./deprecations)
-
----
-
-## Summary
-
-This page provides a focused, user-centric summary of breaking changes and migrations specific to GoogleTest and GoogleMock. It empowers users to upgrade safely by highlighting critical API shifts, updated macro usage, behavior changes, and strategies to maintain test stability and accuracy.
-
----
+Ensure your tests and build systems align to these guidelines to fully benefit from GoogleTest and GoogleMock's latest improvements while minimizing upgrade disruptions.
