--- a/overview/intro-concepts/core-concepts-terminology.mdx
+++ b/overview/intro-concepts/core-concepts-terminology.mdx
@@ -1,243 +1,125 @@
 ---
-title: "Core Concepts & Terminology"
-description: "A user-focused glossary introducing essential testing concepts (e.g., test fixtures, assertions, matchers, parameterized tests, death tests, and mock objects) explained in everyday language, with signposts to where these features appear in the framework."
+title: "Core Concepts and Terminology"
+description: "Explore the essential concepts, such as test cases, assertions, mock objects, and test fixtures, that form the backbone of effective testing with GoogleTest. This page demystifies terminology for new users while providing clarity for advanced use."
 ---
 
-# Core Concepts & Terminology
+# Core Concepts and Terminology
 
-Welcome to the foundational glossary of GoogleTest, your quick reference to essential concepts and terminology that underpin effective testing using this framework. This page demystifies key ideas such as test fixtures, assertions, matchers, parameterized and typed tests, death tests, and mock objects — all explained in everyday language tailored for C++ developers.
-
-Understanding these concepts will empower you to write more reliable, maintainable tests and navigate the full GoogleTest ecosystem with confidence.
+Explore the essential concepts, such as test cases, assertions, mock objects, and test fixtures, that form the backbone of effective testing with GoogleTest. This page demystifies terminology for new users while providing clarity for advanced use.
 
 ---
 
-## What Is a Test in GoogleTest?
+## Understanding the Building Blocks of GoogleTest
 
-A **test** is the smallest unit of validation you write. It checks a specific piece of your code by running logic and making **assertions** to verify expected behavior. Every test lives inside a **test suite**.
+GoogleTest provides a robust framework for writing and running C++ tests. To leverage its power effectively, it’s crucial to grasp its core concepts and terminology. This understanding enables you to write clearer tests, use mocking effectively, and debug issues faster.
 
-```cpp
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-```
+### Test Case
 
-Here, `FactorialTest` is the test suite; `HandlesZeroInput` is the test name.
+A **test case** is a logical grouping of related tests. It organizes tests by feature, component, or behavior, allowing you to manage and run related tests together.
 
+### Test
 
-## Test Suites and Fixtures
+A **test** is an individual unit that checks a specific behavior or state. Each test is identified by a unique name within a test case and consists of one or more assertions.
 
-### Test Suites
+### Assertion
 
-A **test suite** groups related tests together, often reflecting a component or function of your software. This grouping helps organize your tests logically.
+An **assertion** is a statement that verifies whether a condition is true or false. GoogleTest provides a rich set of assertions (e.g., `EXPECT_EQ`, `ASSERT_TRUE`) to express expectations about your code.
 
-### Test Fixtures
+### Test Fixture
 
-A **test fixture** is a class that provides a shared environment for multiple tests, helping you reuse setup and teardown code.
+A **test fixture** is a C++ class that sets up a common environment for multiple tests. It provides shared setup and teardown methods, allowing tests to reuse code and maintain isolation.
 
-For example, if many tests need the same objects or data, define a test fixture:
+### Mock Object
 
-```cpp
-class QueueTest : public ::testing::Test {
- protected:
-  QueueTest() {
-     q1_.Enqueue(1);
-     q2_.Enqueue(2); q2_.Enqueue(3);
-  }
+A **mock object** is a test double that mimics the behavior of a real object. It records interactions and can be programmed to respond in specific ways. GoogleMock extends GoogleTest to support creating and using mock objects.
 
-  Queue<int> q0_;
-  Queue<int> q1_;
-  Queue<int> q2_;
-};
-```
+---
 
-Then write tests using the fixture:
+## Key Principles and Terminology
 
-```cpp
-TEST_F(QueueTest, IsEmptyInitially) {
-  EXPECT_EQ(q0_.size(), 0);
-}
+| Term           | Definition                                                                                   |
+|----------------|----------------------------------------------------------------------------------------------|
+| Test Suite     | Another term for Test Case, a collection of related tests.                                  |
+| Test Runner    | The executable or component responsible for running tests and reporting results.            |
+| Test Fixture   | A class that provides setup and teardown code for tests sharing the same environment.       |
+| Assertion      | A condition that verifies expected vs. actual outcomes; failures here flag test failures.   |
+| Mock Object    | An object that simulates behavior of real modules, facilitating interaction testing.        |
 
-TEST_F(QueueTest, DequeueWorks) {
-  int* n = q1_.Dequeue();
-  ASSERT_NE(n, nullptr);
-  EXPECT_EQ(*n, 1);
-  delete n;
-}
-```
+---
 
-Each test operates on a fresh fixture instance, ensuring independence.
+## How These Concepts Fit Together
 
+A typical GoogleTest workflow uses these components as follows:
 
-## Assertions: Verifying Expected Behavior
+1. **Organize tests** into test cases or suites.
+2. **Write individual tests**, each performing a discrete behavior check.
+3. **Use assertions** within tests to validate conditions.
+4. **Create test fixtures** if multiple tests share setup/teardown logic.
+5. **Employ mock objects** to replace dependencies, allowing isolated testing of components.
 
-Assertions are conditions your test checks to confirm correct behavior. Failures are reported with helpful messages.
+This layered approach promotes modular, maintainable, and readable tests.
 
-- `EXPECT_*`: Nonfatal assertions that report failures but let tests keep running.
-- `ASSERT_*`: Fatal assertions that abort the current test if they fail.
-
-Example:
-
-```cpp
-EXPECT_EQ(result, expected_value) << "Result did not match expected value.";
-```
-
-You can assert booleans, compare values, strings, containers, exception throwing, and more.
-
-
-## Matchers: Precise and Expressive Checks
-
-Matchers let you specify rich conditions for expected values in assertions and mock expectations.
-
-Example:
-
-```cpp
-EXPECT_THAT(my_string, StartsWith("Hello"));
-EXPECT_THAT(value, AllOf(Gt(5), Lt(10)));
-```
-
-Matchers read like natural language and generate detailed failure messages, helping diagnose problems faster.
-
-
-## Parameterized Tests: Testing Multiple Inputs Efficiently
-
-Parameterized tests let you run the same test logic over different data values without repetition.
-
-You define a test fixture that inherits from `testing::TestWithParam<T>`, where `T` is the parameter type.
-
-```cpp
-class FooTest : public ::testing::TestWithParam<std::string> {};
-
-TEST_P(FooTest, HandlesStrings) {
-  std::string param = GetParam();
-  EXPECT_TRUE(Validate(param));
-}
-
-INSTANTIATE_TEST_SUITE_P(Examples, FooTest, testing::Values("input1", "input2"));
-```
-
-This runs `HandlesStrings` twice, once with each input.
-
-
-## Typed Tests: Testing Across Multiple Types
-
-Typed tests let you reuse the same test logic with different types, useful for testing template classes or interfaces.
-
-You write a fixture template:
-
-```cpp
-template <typename T>
-class MyTypedTest : public ::testing::Test {
- public:
-  T value_;
-};
-
-using MyTypes = ::testing::Types<int, double>;
-TYPED_TEST_SUITE(MyTypedTest, MyTypes);
-
-TYPED_TEST(MyTypedTest, IsDefaultConstructed) {
-  TypeParam val = this->value_;
-  EXPECT_EQ(val, TypeParam());
-}
-```
-
-The same test is run for both `int` and `double`.
-
-
-## Death Tests: Verifying Program Aborts
-
-Sometimes your code must crash or terminate under certain conditions (e.g., failed assertions). These are called **death tests**.
-
-GoogleTest supports macros like `ASSERT_DEATH()` and `EXPECT_DEATH()` to verify such behavior.
-
-Example:
-
-```cpp
-TEST(MyDeathTest, CrashesOnBadInput) {
-  ASSERT_DEATH({ DoSomething(-1); }, "Invalid argument");
-}
-```
-
-The test passes if `DoSomething(-1)` terminates the process and produces an error message containing "Invalid argument".
-
-
-## Mock Objects: Simulating Dependencies
-
-GoogleMock extends GoogleTest with mock objects that simulate and verify interactions with dependencies.
-
-- Define mocks with `MOCK_METHOD` inside mock classes.
-- Set expectations on mock method calls with `EXPECT_CALL`.
-
-Example mock class:
-
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, Bar, (int x), (override));
-};
-```
-
-Example test using mocks:
-
-```cpp
-MockFoo mock;
-EXPECT_CALL(mock, Bar(5)).WillOnce(Return(10));
-EXPECT_EQ(mock.Bar(5), 10);
-```
-
-Mocking lets you isolate your code and verify its behavior precisely.
-
-
-## Additional Core Concepts
-
-- **Test Event Listeners:** Components you can write to customize handling of test events (start, finish, failures).
-- **RecordProperty:** Log arbitrary key/value properties about tests that get included in reports.
-- **Test Filters:** Select which tests to run via patterns like `--gtest_filter=FooTest.*`.
-
-
-## How This Page Fits Into GoogleTest Documentation
-
-- Complements the [What is GoogleTest?](overview/intro-concepts/what-is-googletest) overview.
-- Provides foundational terminology referenced in detailed guides like [Writing Your First Test](guides/getting-started/writing-first-test) and [Assertions, Macros & Expectations](guides/core-test-design/assertions-macros).
-- Links to related advanced topics such as [Parameterized & Typed Tests](guides/core-test-design/parameterized-typed-tests) and [Death Tests & Error Handling](guides/core-test-design/death-tests-error-handling).
-
+---
 
 ## Practical Tips
 
-- Avoid underscores (`_`) in test suite and test names to prevent naming conflicts and compilation errors.
-- Use test fixtures to reduce repetition and share setup across related tests.
-- Prefer `EXPECT_*` for checking multiple conditions and `ASSERT_*` when early exit on failure is necessary.
-- Use parameterized tests to efficiently verify behavior over multiple inputs.
-- Leverage matchers to write clear and expressive assertions.
-- Employ mock objects to isolate units and verify interactions.
+- Always provide **unique, descriptive names** for your tests and test cases to make reports easy to understand.
+- Use **test fixtures** when multiple tests need common setup to reduce code duplication.
+- Prefer **mock objects** over real external dependencies to keep tests fast and deterministic.
+- Understand the difference between **assertions that continue tests (EXPECT_*) and those that abort tests (ASSERT_*)** to structure tests appropriately.
 
+---
+
+## Common Terminology Clarifications
+
+- **Test Case vs Test Suite:** Used interchangeably in GoogleTest, though GoogleTest uses Test Case primarily.
+- **Mock vs Fake:** Mocks verify interactions; fakes provide simplified working implementations.
+- **Match vs Expectation:** A *matcher* checks if an argument meets criteria; an *expectation* asserts that a call matching those criteria happens.
+
+---
 
 ## Troubleshooting Common Confusions
 
-- **Why can't I use `ASSERT_*` in constructors?** GoogleTest only allows fatal assertions in void-returning functions; constructors are non-void.
-
-- **What’s the difference between uninteresting and unexpected mock calls?**
-  - *Uninteresting*: No expectation set; generates a warning by default.
-  - *Unexpected*: Calls don't match any expectation; fails the test.
-
-- **How to get custom failure messages?** Use streaming with `<<` in assertions or write custom matchers.
-
-- **How to control test execution?** Use filters, disable tests with `DISABLED_` prefix, and use flags like `--gtest_fail_fast`.
-
-
-## Additional Resources and Next Steps
-
-- Deep dive into writing **assertions**: [Assertions Reference](docs/reference/assertions.md)
-- Explore **mocking** mechanics: [Mocking Reference](docs/reference/mocking.md), [gMock Cookbook](guides/mocking-advanced-techniques/actions-and-matchers)
-- Get started with writing tests: [Writing Your First Test](guides/getting-started/writing-first-test)
-- Understand parameterized tests: [Parameterized & Typed Tests](guides/core-test-design/parameterized-typed-tests)
-- Learn advanced testing techniques: [Advanced GoogleTest Topics](docs/advanced.md)
-- Review FAQs for common issues: [GoogleTest FAQ](docs/faq.md)
-
+- A test failing might mean an assertion failed, or an unexpected call to a mock occurred.
+- Tests can pass even if not all mock expectations are set correctly; ensure you verify mock expectations.
+- Mock objects require **virtual destructors** in their interfaces to avoid memory leaks.
 
 ---
 
-_Discover more about GoogleTest by exploring these foundational concepts and building on your knowledge with practical examples throughout this guide._
+## Ready to Advance?
+
+Once comfortable with these fundamental terms, explore practical guidance on writing tests and using mocks:
+
+- [Writing and Running Your First Test](/guides/getting-started/your-first-test)
+- [Basic Mocking with GoogleMock](/getting-started/configuration-and-first-use/using-googlemock-basics)
+- [Mocking in Practice: Isolating Dependencies](/guides/core-test-workflows/mocking-intro)
+
+You might also want to review the [Product Value Proposition](/overview/intro-concepts/product-value-proposition) page to understand the goals GoogleTest aims to achieve.
 
 ---
 
-<Source url="https://github.com/google/googletest" paths={[{"path": "docs/primer.md"}, {"path": "docs/reference/assertions.md"}, {"path": "docs/reference/mocking.md"}, {"path": "docs/advanced.md"}, {"path": "docs/faq.md"}]} />
+## References and Further Reading
+
+- [GoogleTest Overview and Architecture](/overview/intro-concepts/product-value-proposition)
+- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- [GoogleMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
+
+---
+
+## Diagram: Core Test Workflow Overview
+
+```mermaid
+flowchart TD
+  Start([Start Testing]) --> WriteTestCase[Test Case]
+  WriteTestCase --> WriteTest[Test]
+  WriteTest --> UseAssertions[Add Assertions]
+  WriteTest --> UseFixtures[Optional: Use Test Fixtures]
+  WriteTest --> UseMocks[Optional: Use Mock Objects]
+  UseFixtures --> RunTests[Run Tests]
+  UseMocks --> RunTests
+  UseAssertions --> RunTests
+  RunTests --> ReportResults[Report Success/Failure]
+```
+
+---
